CHANGELOG

>>BUILD 24.08.19
* Improved wiki generator
* Improved translations
* Improved all bar and bar gate textures
* Improved 2 legendary sword textures
* Improved capes', banners' & shields' textures

* Fixed too good stats of yi ti bombardier
* Fixed crash related to Summer Islands levymans
* Fixed bug with traders' potion ids
* Fixed bug with soldiers' and captains' capes
* Fixed bug with captains' gender

* Renamed a few item codenames (compatibility with older worlds exists)

>>BUILD 24.07.10
BREAKING CHANGES. NOT COMPATIBLE WITH WORLDS, CREATED WITH VER. <24.X

* New creative inventory items and blocks order
* Reworked achievement system: hundreds of new achievements
* Reworked all trade entries of all traders.
* New Valyria region, reworked from scratch
* New economics: silver, gold, valyrian steel and different gems now has fixed prices world-wide.

+ Added DRACARYS FOR DRAGONS!

+ Added full translations for all supported languages
+ Added NEI support for millstone
+ Added beavers (with their spawn) and their drop (with its usage)
+ Added Janos Slynt's, Pycelle's and Melisandra's drop
+ Added new world type - Game of Thrones without fixed structures and characters, but with map.
+ Added one forgotten dirtPath:2 recipe
+ Added crafts for stone chest, sandstone chest and replaced the craft of reeds chest with new one.
+ Added a few achievements
+ Added more tooltips for items with mechanics description
+ Added new and removed old military mobs to make factions more balanced
+ Added new ifekevron skins
+ Added sandstone chests, ice & obsidian stalactites to natural spawn
+ Added targaryen items, lannicter brooch and silver hand brooch to natural drop

* Improved asshai staffs' target selectors
* Improved wiki-generator
* Improved blizzards' drop, AI and alignment bonus
* Improved mob selector for smoking, drinking, being robbed and being married.
* Improved sound and volume of a few animals